tests/NormalTests/paczka1/fuzzy1/48661333.err
Error in line 5: S840 S677 59,7
Error in line 7: S840 S50 43,5
Error in line 1: 1mXUZlia7q S677 68,9
Error in line 18: 1mXUZlia7q S840 -1,9
Error in line 19: S840 S840 37,4
Error in line 24: B0K S677 34,8
Error in line 27: M1JEh S840 88,2
